<resources>
    <string name="ok_dialog_button">OK</string>
    <string name="cancel_dialog_button">Cancel</string>
    <string name="app_name">PetFeed</string>
    <string name="action_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="action_schedule">Schedule</string>
    <string name="action_about">About</string>
    <string name="about_text">About</string>
    <string name="general_device_info">General device info : </string>
    <string name="version_number">Version : </string>
    <string name="id_number">ID : </string>
    <string name="_connecting">...connecting</string>
    <string name="connecting_to_devise">connecting to device...</string>
    <string name="ready_on_local_ip">Ready on local IP:</string>
    <string name="ready_on_remote_ip">Ready on remote IP: </string>
    <string name="ready_on_cloud">Ready on Cloud: </string>
    <string name="alert_attention">Attention!</string>
    <string name="devise_has_not_been_found">Devise has not been found</string>
    <string name="connecting_device_to_wifi">connecting device to WIFI...</string>
    <string name="select_time">Select Time</string>
    <string name="youll_be_temporary_disconect_from_network">* You\'ll be temporary disconect from your network</string>
    <string name="device_not_in_setup_mode">Device not in Setup Mode. Press Setup button on device</string>
    <string name="device_not_found_in_lan">Device not found. Please connect to device via LAN</string>
    <string name="time_has_been_set_successfuly">Time has been successfuly set on device</string>
    <string name="connection_problem_durring_time_set">Connection problem durring time set. Try again.</string>
    <string name="schedule">Schedule</string>
    <string name="button_set_schedule">Set Schedule</string>
    <string name="settings_text">Settings</string>
    <string name="wifi_text">WiFi</string>
    <string name="setup_wifi_credentials">Setup wifi credentials for device</string>
    <string name="cloud_text">Cloud</string>
    <string name="setup_cloud_settings">Setup cloud settings</string>
    <string name="general_text">General</string>
    <string name="general_settings">General settings of the device</string>
    <string name="remote_settings">Remote settings</string>
    <string name="cloud_remote_control">Cloud remote control</string>
    <string name="cloud_adress">Cloud adress</string>
    <string name="cloud_web_site">Cloud web site</string>
    <string name="direct_remote_control">Direct remote control</string>
    <string name="remote_device_control">Remote device control</string>
    <string name="devise_public_ip">Device public IP</string>
    <string name="external_ip_from_internet">External IP accessible from Internet</string>
    <string name="device_public_port">Device public port</string>
    <string name="port_for_communication_internet">Port for communication from Internet</string>
    <string name="meal_size">Meal size</string>
    <string name="number_portion_meal">Number portion at meal</string>
    <string name="device_time">Device time</string>
    <string name="current_device_time">Current device time</string>
    <string name="wifi_settings">WiFi settings</string>
    <string name="ssid_text">SSID</string>
    <string name="network_name">Network name</string>
    <string name="password_text">Password</string>
    <string name="wifi_password">Wifi password</string>
    <string name="static_ip_settings">Static IP settings</string>
    <string name="use_static_ip">Use stattic IP</string>
    <string name="device_ip">Device IP</string>
    <string name="gateway">Gateway</string>
    <string name="subnet_mask">Subnet mask</string>
    <string name="put_setting_to_device">Put settings to device</string>
    <string name="submit_text">Submit</string>
    <string name="set_ssid_and_pass">Please, set WiFi SSID first</string>
    <string name="empty_tank_description">No food in tank</string>
</resources>
