<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="com.example.alex.petfeed.Preferences$SettingsFragment"
        android:title="@string/wifi_text"
        android:summary="@string/setup_wifi_credentials" >
        <extra android:name="area" android:value="wifi" />
    </header>
    <header
        android:fragment="com.example.alex.petfeed.Preferences$SettingsFragment"
        android:title="@string/cloud_text"
        android:summary="@string/setup_cloud_settings" >
        <extra android:name="area" android:value="cloud" />
    </header>
    <header
        android:fragment="com.example.alex.petfeed.Preferences$SettingsFragment"
        android:title="@string/general_text"
        android:summary="@string/general_settings" >
        <extra android:name="area" android:value="general" />
    </header>
</preference-headers>