<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.alex.petfeed.MainActivity">

    <!--<item
        android:id="@+id/action_home"
        android:title="@string/action_home"
        android:icon="@drawable/ic_menu_home"
        app:showAsAction="always" />
        -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_schedule"
        android:title="@string/action_schedule"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
